# RAG_Chatbot

./: .gitignore  DEPLOY.md  README.md  render.yaml
backend/: .env.example  main.py  pyproject.toml  requirements.txt
backend/data/text_files/: contact_and_locations.txt  faq.txt  leadership_profiles.txt  project_examples.txt
backend/data/vector_store/: chroma.sqlite3
backend/src/: __init__.py  data_loader.py  embedding.py  llm.py  search.py  vectorstore.py
frontend/: .env.example  .gitignore  index.html  package.json  tailwind.config.js  vite.config.js
frontend/src/: index.css
frontend/src/components/: App.jsx  ChatWindow.jsx  InputBox.jsx  Message.jsx
frontend/src/services/: api.js
